--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,74 +12,28 @@
         android:id="@+id/idTVQuestionAttempt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="200dp"
+        android:layout_marginTop="250dp"
         android:gravity="center"
-        android:text="Number of Questions"
+        android:text="Welcome to JeoZone!"
         android:textAlignment="center"
         android:textAllCaps="false"
         android:textColor="@color/black"
-        android:textSize="20sp" />
-
-    <TextView
-        android:id="@+id/idTVQuestion"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/idTVQuestionAttempt"
-        android:layout_marginTop="30dp"
-        android:gravity="center"
-        android:text="Question"
-        android:textAlignment="center"
-        android:textColor="@color/black"
         android:textSize="25sp" />
 
-    <LinearLayout
+    <Button
+        android:id="@+id/playBtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/idTVQuestion"
-        android:layout_marginTop="50dp"
-        android:orientation="vertical">
-
-        <Button
-            android:id="@+id/idBtnOption1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:background="@color/white"
-            android:padding="4dp"
-            android:text="Option 1"
-            android:textAllCaps="false" />
-
-        <Button
-            android:id="@+id/idBtnOption2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:background="@color/purple_200"
-            android:padding="4dp"
-            android:text="Option 2"
-            android:textAllCaps="false" />
-
-        <Button
-            android:id="@+id/idBtnOption3"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:background="@color/purple_200"
-            android:padding="4dp"
-            android:text="Option 3"
-            android:textAllCaps="false" />
-
-        <Button
-            android:id="@+id/idBtnOption4"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:background="@color/purple_200"
-            android:padding="4dp"
-            android:text="Option 4"
-            android:textAllCaps="false" />
-
-    </LinearLayout>
+        android:layout_marginTop="100dp"
+        android:layout_margin="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:background="@color/white"
+        android:padding="4dp"
+        android:layout_below="@+id/idTVQuestionAttempt"
+        android:text="Play"
+        android:textAllCaps="false"
+        />
 
     <ImageView
         android:id="@+id/imageView"
